# gitkeepr

./: Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: python-base.yml  testing.yaml
gitkeepr/: __init__.py  collborator.py  constants.py  errors.py  main.py  models.py  repository.py  templating.py
gitkeepr/templates/repo/: .gitignore.j2  .pre-commit-config.yaml.j2  README.md.j2
gitkeepr/templates/repo/.github/: PULL_REQUEST_TEMPLATE.md.j2
tests/: conftest.py  helpers.py  runners.py  test_basic.py  test_repository.py
