[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gitkeepr"
version = "0.1.0"
description = "Python-based CLI tool for managing Github repositories from local"
authors = ["Joaquin Franco <chino.franco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "gitkeepr" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
colorama = "^0.4.6"
requests = "^2.32.3"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
gitkeepr = "gitkeepr.main:cli"
